--- a/realtestcar.world.erb
+++ b/realtestcar.world.erb
@@ -1,32 +1,14 @@
 <?xml version="1.0" ?>
 <%
-
-  # asphalt plane
-  asphalt_positions = [-455, -355, -255, -155, -55, 55, 155, 255, 355, 455]
-  lane_divider_x_positions = [-405, -305, -205, -105, -5, 5, 105, 205, 305, 405]
-  big_lane_divider_positions = [0]
-  lane_divider_y_positions = []
-  y = -499
-  skip = -410
-  while y < -11
-    while y < skip
-        lane_divider_y_positions << y
-        y = y + 4
+    grid = 20
+    n = 0
+    block = 55
+    asphalt_positions = []
+    while n < grid
+        asphalt_positions << block
+        block = block + 100
+        n = n + 1
     end
-    y = y + 8
-    skip = skip + 100
-  end
-
-  y = 499
-  skip = 410
-  while y > 11
-      while y > skip
-          lane_divider_y_positions << y
-          y = y - 4
-      end
-      y = y - 8
-      skip = skip - 100
-  end
 
 %>
 
@@ -41,29 +23,23 @@
        <uri>models/ground_plane</uri>
     </include>
     <include>
-       <uri>models/lane_divider</uri>
-    </include>
-    <include>
       <uri>model://sun</uri>
     </include>
-    <include>
-       <pose>5 5 100 0 0 0</pose>
-       <uri>models/utility_cart</uri>
-    </include>
-
+  
+  
 <%   # Asphalt Planes
    x = -1
    y = 0
-   while y < 10
-      x = x + 1
-      if x == 10
-         if y == 9
-            break
-         end
-         x = 0
-         y = y + 1
-      end
-      name = 'asphalt_plane_' + x.to_s + '_' + y.to_s
+   while y < grid
+       x = x + 1
+       if x == grid
+           if y == grid - 1
+               break
+           end
+           x = 0
+           y = y + 1
+       end
+       name = 'asphalt_plane_' + x.to_s + '_' + y.to_s
 %>
 
   <%="<model name='#{name}'>" %>
@@ -96,45 +72,45 @@
   </model>
 <%  end %>
 
-
-<%   #Lane Dividers
-    x = 0
-    y = -1
-    while x < 10
-        y = y + 1
-        if y == 230
-            if x == 2
+<%    #Roads
+    x = -1
+    y = 0
+    while y < grid
+        x = x + 1
+        if x == grid
+            if y == grid - 1
                 break
             end
-            y = 0
-            x = x +1
+            x = 0
+            y = y + 1
         end
-        name = 'lane_divider_' + x.to_s + '_' + y.to_s
+        name1 = 'road_1_' + x.to_s + '_' + y.to_s
+        name2 = 'road_2_' + x.to_s + '_' + y.to_s
+        name3 = 'intersection_' + x.to_s + '_' + y.to_s
 %>
 
-    <%="<model name='#{name}'>" %>
-        <pose> <%=lane_divider_x_positions[x]%> <%=lane_divider_y_positions[y]%> 0 0 0 0</pose>
-        <static>true</static>
-        <link name="link">
-        <collision name="collision">
-            <geometry>
-                <box>
-                    <size>.25 2 .025</size>
-                </box>
-                </geometry>
-            </collision>
-            <visual name="visual">
-                <cast_shadows>false</cast_shadows>
-                <geometry>
-                    <box>
-                        <size>.25 2 .025</size>
-                    </box>
-                </geometry>
-            </visual>
-        </link>
-    </model>
+    <%="<road name='#{name1}'>" %>
+        <width>10</width>
+        <point><%= asphalt_positions[x]-50%> <%= asphalt_positions[y]-45%> .005</point>
+        <point><%= asphalt_positions[x]-50%> <%= asphalt_positions[y]+45%> .005</point>
+    </road>
+    <%="<road name='#{name2}'>" %>
+        <width>10</width>
+        <point><%= asphalt_positions[x]-45%> <%= asphalt_positions[y]-50%> .005</point>
+        <point><%= asphalt_positions[x]+45%> <%= asphalt_positions[y]-50%> .005</point>
+    </road>
+    <%="<road name='#{name3}'>" %>
+        <width>10</width>
+        <point><%= asphalt_positions[x]-55%> <%= asphalt_positions[y]-50%> .005</point>
+        <point><%= asphalt_positions[x]-45%> <%= asphalt_positions[y]-50%> .005</point>
+        <material>
+            <script>
+                <uri>file://media/materials/scripts/gazebo.material</uri>
+                <name>Gazebo/Footway</name>
+            </script>
+        </material>
+    </road>
 <%  end %>
-
 
   </world>
 </sdf>
