fixed new LIDAR sensors and turns away from walls

--- a/realtestcar.world.erb
+++ b/realtestcar.world.erb
@@ -26,8 +26,8 @@
       <uri>model://sun</uri>
     </include>
     <include>
-        <uri>/models/utility_cart</uri>
-        <pose>-10 -10 5 0 0 0</pose>
+        <uri>/models/sdcCar</uri>
+        <pose>5 5 0 0 0 0</pose>
     </include>
   
   
@@ -53,7 +53,7 @@
       <collision name="collision">
         <geometry>
           <box>
-            <size>90 90 .1</size>
+            <size>90 90 3</size>
           </box>
         </geometry>
       </collision>
@@ -61,7 +61,7 @@
         <cast_shadows>false</cast_shadows>
         <geometry>
           <box>
-            <size>90 90 .1</size>
+            <size>90 90 3</size>
           </box>
         </geometry>
         <material>
