Walled driving works much better now, got some more video clips

--- a/realtestcar.world.erb
+++ b/realtestcar.world.erb
@@ -27,7 +27,7 @@
     </include>
     <include>
         <uri>/models/sdcCar</uri>
-        <pose>5 5 0 0 0 0</pose>
+        <pose>5 107 0 0 0 .3</pose>
     </include>
   
   
