--- a/realtestcar.world.erb
+++ b/realtestcar.world.erb
@@ -27,7 +27,7 @@
     </include>
     <include>
         <uri>/models/sdcCar</uri>
-        <pose>5 107 0 0 0 .3</pose>
+        <pose>105 205 0 0 0 0</pose>
     </include>
 
 
